--- a/src/components/Navigation/styles.module.css
+++ b/src/components/Navigation/styles.module.css
@@ -54,7 +54,7 @@
 		width: 100%;
 		display: flex;
 		flex-direction: column;
-		height: 100vh;
+		height: var(--size-8);
 	}
 }
 
@@ -63,19 +63,21 @@
 	width: 100%;
 	height: 100%;
 	min-height: var(--size-1);
+	position: relative;
 	background-color: var(--primary-dark);
-
-	& ul {
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
-		height: 100%;
-		width: 100%;
-	}
 
 	@media screen and (max-width: 990px) {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+	}
+
+	& ul {
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		height: calc(100vh - var(--size-8));
+		width: 100%;
 	}
 }
