--- a/src/layouts/MainLayout/styles.module.css
+++ b/src/layouts/MainLayout/styles.module.css
@@ -1,5 +1,4 @@
 .container {
-	overflow: hidden;
 	height: 100vh;
 	width: 100%;
 	display: flex;
